Correcting project alignment

--- a/src/components/ExpandableNavSection/EditableNavLink/EditableNavLink.module.css
+++ b/src/components/ExpandableNavSection/EditableNavLink/EditableNavLink.module.css
@@ -18,3 +18,7 @@
 .buttonContainer {
     
 }
+.editablenav a.active{
+    color: #e80f2d;
+    font-weight: bold;
+}
